2010-06-23  Noel O'Boyle

	* src/kekulize.cpp, include/openbabel/mol.h: Fix compilation errors
	with MSVC (and replace some Tabs with whitespace)

2010-06-23  Tim Vandermeersch

        * src/ring.cpp: LSSR selection seems to work now. It is based on
        lemma 1 from the Vismara paper. (See source for complete reference)

        * src/obiter.cpp, src/ring.cpp: Ring sets should no longer be 
        acquired using OBMol::GetData(OBGenericDataType::RingData). Ring 
        sets now have the correct "SSSR"/"LSSR" attribute set. 

        * src/kekulize.cpp: Use LSSR.

        * test/lssrtest.cpp: Add tests for LSSR composition. All unit tests 
        pass except for smarts (was broken before) and py_kekulize. I'm not 
        sure why the last test fails but the stored results might need updating?

2010-06-22  Tim Vandermeersch

        * include/openbabel/mol.h, src/mol.cpp: Add LSSR, add aromaticity 
        changes from Craig.

        * src/ring.cpp: Add LSSR (FindLSSR, GetLSSR, ...)

        * src/kekulize.cpp: Changes to aromaticity from Craig James. Still
        uses SSSR.

        * test/CMakeLists.txt, test/lssrtest.cpp: Add unit test for LSSR. 
        The test reorders the atoms and checks if the same rings are found.
        Currently used aromatics.smi, attype.00.smi and nci.smi. All 1327
        test cases pass. (old ring & aromatics test still pass. py_kelule
        test fails though.)

2010-06-21  Noel O'Boyle

	* src/builder.cpp: Fix bug when correcting tet stereo where there is
	an Implicit H

2010-06-20  Noel O'Boyle

	* src/formats/pdbformat.cpp: the_res not NULL-terminated. Resulted in
	junk output after residue name in PDB files.

2010-06-20  Noel O'Boyle

	* src/formats/mol2format.cpp: Removed obsolete code that was causing
	performance problems on large files (e.g. proteins). Fixes
	bug #3018188

2010-06-19  Chris Morley

	* src/formats/mdlformat.cpp: Added warning message when reading